log
Thu Apr 16 05:35:50 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
97fbcd0
Thu Apr 16 06:28:30 PM UTC 2026: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:19: error: ‘HasMap’ undeclared (first use in this function); did you mean ‘HashMap’?
   48 |     HashMap *map=(HasMap*)malloc(sizeof(HashMap));
      |                   ^~~~~~
      |                   HashMap
hashmap.c:48:19: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:48:26: error: expected expression before ‘)’ token
   48 |     HashMap *map=(HasMap*)malloc(sizeof(HashMap));
      |                          ^
c402724
Thu Apr 16 06:29:59 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
0e012f0
Thu Apr 16 07:10:21 PM UTC 2026: 
 tests:  1|6
total_score: 5/60
04b991c
